# CampusMission

./: .gitmodules  README.md
Mission01/01/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Mission01/01/src/: CMakeLists.txt  matmul.cpp  matmul.hpp
Mission01/01/test/: CMakeCache.txt  CMakeLists.txt  Makefile  benchmark.csv  cmake_install.cmake  main.cpp  plot.py  test
Mission01/02/: CMakeCache.txt  CMakeLists.txt  MANIFEST.in  Makefile  README.md  cmake_install.cmake  setup.py
Mission01/02/mat_mul/: __init__.py
Mission01/02/mat_mul.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Mission01/02/src/: matmul_py.cpp
Mission01/02/test/: test_matmul.py
Mission01/03/: README.md
Mission01/03/matmul_service/: CMakeLists.txt  matmul_client.cc  matmul_server.cc
Mission01/03/protos/: matmul.proto
Mission01/04/: README.md
include/: openblas_config.h
lib/: libopenblas.so.0
lib/cmake/openblas/: OpenBLASConfig.cmake
lib/pkgconfig/: openblas.pc
